[package]
name = "jammi-ai"
description = "Embeddable AI engine for inference, embeddings, vector search, and fine-tuning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
jammi-db.workspace = true
jammi-numerics.workspace = true
# `jammi-lora` is pulled for its candle-free config vocabulary (the `BackboneDtype`
# / `LoraInitMode` fields of `FineTuneConfig`, on the wire surface) at all times
# — the workspace pins it `default-features = false`. Its candle stack is opt-in:
# the `local` feature turns `jammi-lora/candle` back on for the embedded fine-tune
# engine.
jammi-lora.workspace = true

# The candle-free wire substrate: the generated `jammi.v1` stubs, the
# proto↔domain conversions, and the moved request / eval / fine-tune vocabulary.
# The engine re-exports that vocabulary at its original paths and builds its
# residual engine-spec converters (`jammi_ai::wire`) on top of jammi-wire's
# `proto` + helpers. Pulled at all times (it is candle-free).
jammi-wire.workspace = true

# ── The embedded ML engine. Every dep below pulls a heavy ML / decode stack and
# is needed only by the in-process engine (the `model` / `inference` / `session`
# / engine-`fine_tune` / `eval::runner` modules). They are gated behind the
# default-on `local` feature so a thin build pulls none of them and stays a thin
# wire-speaker. A default / embedded / PyO3 build keeps them all.
jammi-encoders = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
# Lexical (BM25) retrieval sidecar — the tantivy inverted index, peer of the
# USearch ANN sidecar. Embedded-engine-only, so it rides `local`.
tantivy = { workspace = true, optional = true }
# Image processing
image = { workspace = true, optional = true }
# Audio decode/demux for the audio-embedding path (bytes-in: WAV/FLAC/MP3/Ogg)
symphonia = { workspace = true, optional = true }
# Gzip decompression for OpenCLIP BPE vocab (bpe_simple_vocab_16e6.txt.gz)
flate2 = { workspace = true, optional = true }
# HTTP backend
reqwest = { workspace = true, optional = true }
# `#[async_trait]` for the `annotate` table function's `TableProvider` impl
# (the in-process compound-query surface); only the `local` engine builds it.
async-trait = { workspace = true, optional = true }
# The embedded fine-tune engine trains into a worker-private tempdir before
# publishing the final artifact to the object store; only the `local` engine
# builds that path.
tempfile = { version = "3", optional = true }
# `Bytes` for handing trained-artifact files to the object-store `put_artifact`
# API; only the `local` engine's fine-tune worker uses it.
bytes = { version = "1", optional = true }

datafusion.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
arrow-array.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

# The residual engine-spec converters (`jammi_ai::wire`, under `local`) encode /
# decode the engine `TrainingSpec` / predictor / edge-gather shapes against
# jammi-wire's `proto` and return a `tonic::Status` on a malformed wire body, so
# `tonic` rides the `local` feature as a runtime dep. `prost` rides it too: the
# embedded binding hands the converters a serialized request body to decode
# (the same proto the remote client sends), so `wire` owns the `prost`-decode
# step rather than leaking the proto type and a second decode call site into the
# PyO3 crate. The Flight SQL / IPC transport stack still lives in jammi-wire.
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
parquet.workspace = true
wiremock = "0.6"
serial_test = "3"
jammi-test-utils.workspace = true
# SIGKILL of a spawned worker process in the distributed-validation harness
# (the kill-9 reclaim / artifact-crash-window properties). Test-only.
libc.workspace = true
# Standard-normal quantiles for generating calibrated/ensemble fixtures in the
# calibration-eval unit tests (spec R2). Test-only — the engine routes all
# production calibration math through `jammi-numerics`, never `statrs` directly.
statrs.workspace = true
# Synthetic exchangeable data generators for the conformal coverage tests.
rand.workspace = true
rand_distr.workspace = true
# The gated GPU-capability suite captures the fine-tune trainer's per-epoch
# `avg_train_loss` off its `tracing` events (a `Layer` over the in-process
# worker) to prove on-device learning — the loss-decrease property. Test-only.
tracing-subscriber.workspace = true

[features]
default = ["local"]
# The embedded in-process engine: model loading + inference + fine-tune training
# + embedding/search pipelines, and the candle / hf-hub / symphonia / tokenizers
# / image stack they run on. Default-on, so a plain / embedded / PyO3 build is
# byte-unchanged. It also gates the residual engine-spec converters
# (`jammi_ai::wire`, which return a `tonic::Status` on a malformed wire body), so
# `dep:tonic` rides here. The candle-free wire substrate and the client crates
# live outside this crate, so a consumer that wants a thin client depends on
# `jammi-wire` / `jammi-admin` / `jammi-client`, not a feature-stripped `jammi-ai`.
local = [
    "dep:jammi-encoders",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:hf-hub",
    "dep:tokenizers",
    "dep:tantivy",
    "dep:image",
    "dep:symphonia",
    "dep:flate2",
    "dep:reqwest",
    "dep:async-trait",
    "dep:tempfile",
    "dep:bytes",
    "dep:tonic",
    "dep:prost",
    "jammi-lora/candle",
]
live-hub-tests = []
# A gated, multi-process distributed-validation lane: spawns N `jammi-server`
# worker processes against a shared Postgres catalog + shared object store
# (MinIO) and asserts the durable-worker fleet-safety properties (exactly-one
# claim, kill-9 reclaim, the artifact crash-window on real object storage,
# cross-tenant isolation) under real distribution. Off by default — the harness
# needs `JAMMI_TEST_PG_URL` + a MinIO S3 endpoint and is not part of the hermetic
# `cargo test` lane. The `it` engine suite is still required for the shared
# session/fixture machinery, so this feature implies `local`; it also implies
# `jammi-db/storage-s3` because the harness session reads the worker-published
# adapter back from the shared MinIO bucket (the cross-host artifact round-trip),
# which needs the S3 object-store driver compiled into the test binary.
live-distributed-tests = ["local", "jammi-db/storage-s3"]
# A gated GPU-capability lane: proves the embedded engine's ML *correctness* on a
# real CUDA device — CPU↔GPU output parity for the deterministic verbs
# (`generate_embeddings`, `encode_query`, `propagate_embeddings`, context-predictor
# `predict`) and that `fine_tune` / `fine_tune_graph` actually *learn* on-device
# (loss decreases, adapter changes embeddings). Off by default and not part of the
# hermetic `cargo test` lane: the suite skips cleanly (no failure) without this
# feature, and a meaningful run also needs `--features cuda` plus a visible GPU
# (it pins `require_gpu=true`, so a GPU-less or CPU-only build *fails fast* rather
# than silently degrading to CPU and faking parity). The engine surface it drives
# is the embedded one, so it implies `local`. CI compile-checks it (`--no-run`);
# the live run is a GPU-host (A10G) gate.
live-gpu-tests = ["local"]
# CUDA / Metal acceleration of the embedded engine — only meaningful with `local`.
cuda = ["local", "candle-core/cuda", "candle-nn/cuda"]
metal = ["local", "candle-core/metal", "candle-nn/metal"]

# The `it` integration suite drives the embedded engine end-to-end (model loading,
# inference, fine-tune, search), so it requires the `local` feature. Declaring the
# requirement here lets `--all-targets` skip it cleanly in a non-`local` build
# rather than fail to compile an engine test with no engine.
[[test]]
name = "it"
path = "tests/it/main.rs"
required-features = ["local"]

# The multi-process distributed-validation harness. Its own target (not part of
# the hermetic `it` suite) so it compiles and runs only under
# `live-distributed-tests`, and so the gated CI lane can target it by name with
# `--test distributed`. Spawns `jammi-server` worker processes against a shared
# Postgres + MinIO; never compiled or run on the default `cargo test` lane.
[[test]]
name = "distributed"
path = "tests/distributed/main.rs"
required-features = ["live-distributed-tests"]

# The gated GPU-capability suite. Its own target (not part of the hermetic `it`
# suite) so it compiles and runs only under `live-gpu-tests`. A meaningful run
# also needs `--features cuda` and a visible GPU; without `cuda` (or without a
# GPU) every test early-returns with a `tracing::warn` skip — no `#[ignore]`.
[[test]]
name = "gpu_capability"
path = "tests/gpu_capability/main.rs"
required-features = ["live-gpu-tests"]
