[package]
name = "jammi-bench"
description = "Scale and performance measurement harness for the Jammi engine. A measurement consumer of the engine — not an engine surface — kept out of the published workspace so the engine stays a clean library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "jammi-bench"
path = "src/main.rs"

[dependencies]
jammi-db.workspace = true
jammi-numerics.workspace = true
# The training-throughput tier drives the engine's hermetic CPU fine-tune
# primitives (`gradcache_backward`, `build_projection_head`, `AdamW`) and the
# LoRA layer they run over, so the bench pulls jammi-ai's embedded (`local`)
# engine and the candle stack it trains on — the same surface the engine's own
# `fine_tune` integration suite exercises on `Device::Cpu`.
jammi-ai = { workspace = true, features = ["local"] }
jammi-lora = { workspace = true, features = ["candle"] }
candle-core.workspace = true
candle-nn.workspace = true

arrow.workspace = true
datafusion.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
libc.workspace = true
tempfile = "3"
