[package]
name = "jammi-cli"
description = "Command-line interface for Jammi AI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

# The crate is `jammi-cli`, but the shipped binary is `jammi` — that's the
# command users invoke and what the cookbook recipes / docs / smoke tests
# expect at `target/<profile>/jammi`.
[[bin]]
name = "jammi"
path = "src/main.rs"

[dependencies]
# The CLI is a strict gRPC client: it talks to a running `jammi-server` over the
# wire and never touches the catalog/DB in-process. It depends on `jammi-ai` for
# the thin `wire`-only transport surface (the `Session` / `Target` / request
# shapes) and pulls no embedded ML stack — `default-features = false` drops the
# `local` feature, `wire` turns on `RemoteSession` + `Jammi::open(Remote)`.
jammi-db.workspace = true
jammi-ai = { workspace = true, default-features = false, features = ["wire"] }
# Building the `tonic::transport::Endpoint` that `Target::Remote` carries from
# the translated `--target` URL. Part of the transport stack the wire surface
# already pulls; candle-free.
tonic.workspace = true
# The trigger publish path builds Arrow `RecordBatch`es from `--row` / JSON, and
# the trigger predicate is parsed to SQL through a local empty `SessionContext`
# (parsing only — no catalog), so the CLI keeps arrow + datafusion.
arrow.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
clap.workspace = true
datafusion.workspace = true
futures.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# docs.rs builds with default features only. The thin client carries no feature
# flags, so this pins the empty set explicitly.
[package.metadata.docs.rs]
features = []

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
