[package]
name = "jammi-db"
description = "Vector database, SQL federation, mutable companion tables, and trigger broker for Jammi AI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
postgres = ["datafusion-table-providers/postgres-federation"]
mysql = ["datafusion-table-providers/mysql-federation"]
# Gates tests that require a live Postgres instance (JAMMI_TEST_PG_URL).
live-postgres-tests = []
# Compiles the JetStream broker driver and the live broker tests; both
# require a NATS JetStream server reachable via JAMMI_TEST_NATS_URL.
jetstream-broker = ["dep:async-nats", "dep:arrow-ipc"]
live-broker-tests = ["jetstream-broker"]
# Compiles the mutable-sink crash-recovery checkpoint hook. Pure test
# infrastructure: the hook is a single `await` on a notifier that only
# arms when env vars are set. Off by default; the
# `mutable_crash_recovery.rs` integration test requires it.
test-hooks = []
# Object-store backends. The default build only ships `file://` and
# `memory://`; cloud schemes are opt-in per provider so a tenant who
# never publishes to S3 does not pull in the AWS SDK chain.
storage-s3 = ["object_store/aws"]
storage-gcs = ["object_store/gcp"]
storage-azure = ["object_store/azure"]
storage-cloud = ["storage-s3", "storage-gcs", "storage-azure"]
# Live cloud tests: require credentials + JAMMI_TEST_*_BUCKET env vars.
# Each implies the matching driver feature so the live test compiles.
live-s3-tests = ["storage-s3"]
live-gcs-tests = ["storage-gcs"]
live-azure-tests = ["storage-azure"]

[dependencies]
# Query engine
datafusion.workspace = true
datafusion-federation.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
arrow-array.workspace = true
arrow-ipc = { workspace = true, optional = true }

# External sources (feature-gated — not a workspace dep to avoid sqlite3 links conflict)
datafusion-table-providers = { version = "0.10.1", default-features = false, optional = true }

# Storage
parquet.workspace = true
usearch.workspace = true
sqlx.workspace = true
object_store.workspace = true
bytes = "1"
# tempfile is needed by storage::sidecar_layout to bridge USearch's
# path-based FFI into object_store's byte-stream API for cloud schemes.
tempfile = "3"

# Config
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Caching
moka.workspace = true
seahash.workspace = true
bytemuck.workspace = true

# Retry
backon.workspace = true
futures.workspace = true
async-stream.workspace = true
parking_lot.workspace = true
async-nats = { workspace = true, optional = true }

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
directories.workspace = true
tokio.workspace = true
url.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
jammi-test-utils.workspace = true
test-case = { workspace = true }
libc = { workspace = true }
parquet = { workspace = true }
