[package]
name = "jammi-encoders"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Candle-native BERT-family encoders for sentence embeddings, with built-in PEFT support via jammi-lora."
keywords = ["bert", "sentence-embeddings", "lora", "candle", "transformer"]
categories = ["science"]
readme = "README.md"

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
# Needs the candle-backed LoRA primitives (`LoraLinear` / `MaybeLoraLinear` /
# `LoraError`), so enable jammi-lora's `candle` feature (off at the workspace root).
jammi-lora = { workspace = true, features = ["candle"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
candle-transformers.workspace = true
hf-hub.workspace = true
serde_json.workspace = true
tempfile = "3"

[features]
default = []
# Enables tests/parity.rs which depends on candle-transformers as a numerical
# oracle for the Bert frozen forward pass.
parity-test = []
# Enables tests/golden_parity.rs, which checks the HTSAT-Swin CLAP audio tower
# against committed per-boundary golden activations (dumped from PyTorch
# transformers by tests/fixtures/generate_htsat_clap.py). Needs no torch and no
# network — the goldens are committed binaries.
golden-parity = []
# Enables tests/live_real_clap.rs, which downloads the REAL
# `laion/clap-htsat-fused` checkpoint from the HF Hub and asserts the HTSAT-Swin
# tower reproduces its audio embedding on the committed pinned input. Live: makes
# a network call, so the default `cargo test` stays hermetic.
live-hub-tests = []

[[test]]
name = "it"
path = "tests/it/main.rs"

[[test]]
name = "parity"
path = "tests/parity.rs"

[[test]]
name = "golden_parity"
path = "tests/golden_parity.rs"

[[test]]
name = "live_real_clap"
path = "tests/live_real_clap.rs"
