[package]
name = "jammi-engine"
description = "Query engine, catalog, and storage layer for Jammi AI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
postgres = ["datafusion-table-providers/postgres-federation"]
mysql = ["datafusion-table-providers/mysql-federation"]
# Gates tests that require a live Postgres instance (JAMMI_TEST_PG_URL).
live-postgres-tests = []

[dependencies]
# Query engine
datafusion.workspace = true
datafusion-federation.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
arrow-array.workspace = true
arrow-ipc.workspace = true

# External sources (feature-gated — not a workspace dep to avoid sqlite3 links conflict)
datafusion-table-providers = { version = "0.10.1", default-features = false, optional = true }

# Storage
parquet.workspace = true
usearch.workspace = true
sqlx.workspace = true

# Config
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Caching
moka.workspace = true
seahash.workspace = true
bytemuck.workspace = true

# Retry
backon.workspace = true
futures.workspace = true
async-stream.workspace = true
parking_lot.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
directories.workspace = true
tokio.workspace = true
url.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
jammi-test-utils.workspace = true
