[package]
name = "jammi-numerics"
description = "Numerical kernels for vector search, retrieval, statistics, and Bayesian optimization. Pure math, no I/O, no tensor-library dependency."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
nalgebra.workspace = true
rand.workspace = true
rand_distr.workspace = true
statrs.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
nalgebra.workspace = true
rand.workspace = true
rand_distr.workspace = true
