[package]
name = "jammi-python"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "_native"
# `cdylib` is the maturin-built Python extension module. `rlib` lets
# downstream Rust crates (e.g. a downstream Python-bindings crate) depend on this
# crate and consume its public surface — `PyDatabase::session_arc` and the
# re-exported `InferenceSession` — to share a single session with the OSS
# `jammi_ai.Database` instead of opening a parallel one against the same
# artifact directory. The same crate-type pair is also what allows the
# integration test under `tests/` to drive `PyDatabase` from Rust.
crate-type = ["cdylib", "rlib"]

[dependencies]
jammi-db.workspace = true
# `wire` is enabled here so this crate sees `RemoteSession` and the
# `Target::Remote` arm of `Jammi::open`: the remote-transport binding
# (`RemoteDatabase` / `connect_remote`) reuses the one Rust gRPC client rather
# than hand-rolling a second one. This is the embedded+remote wheel, so it pulls
# tonic/prost — expected for a remote-capable SDK; the prior "embedded-only,
# tonic-free wheel" invariant no longer applies.
jammi-ai = { workspace = true, features = ["wire"] }
jammi-lora.workspace = true
pyo3.workspace = true
arrow.workspace = true
arrow-array.workspace = true
chrono.workspace = true
datafusion.workspace = true
futures.workspace = true
pyo3-arrow.workspace = true
tokio.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
# The remote-binding integration test stands up an in-process gRPC chain
# (`jammi-server::runtime::serve_grpc_chain`) and connects a `RemoteDatabase` to
# it, asserting wire parity with the embedded path against the same engine.
jammi-server.workspace = true
jammi-test-utils.workspace = true
tokio.workspace = true

[features]
# `extension-module` tells pyo3 to skip linking against libpython — the
# right choice when the produced cdylib is loaded by a Python interpreter.
# The maturin build activates it explicitly via `features =
# ["extension-module"]` in `pyproject.toml`. Leaving it OFF by default
# means `cargo test --workspace` links the integration test binary
# against libpython and runs cleanly without per-crate flags.
extension-module = ["pyo3/extension-module"]
cuda = ["jammi-ai/cuda"]
