[package]
name = "jammi-python"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "_native"
# `cdylib` is the maturin-built Python extension module. `rlib` lets
# downstream Rust crates (e.g. a downstream Python-bindings crate) depend on this
# crate and consume its public surface — `PyDatabase::session_arc` and the
# re-exported `InferenceSession` — to share a single session with the OSS
# `jammi_ai.Database` instead of opening a parallel one against the same
# artifact directory. The same crate-type pair is also what allows the
# integration test under `tests/` to drive `PyDatabase` from Rust.
crate-type = ["cdylib", "rlib"]

[dependencies]
jammi-db.workspace = true
# LOCAL-ONLY. The embed wheel is the in-process engine; its remote arm is the
# bundled pure-Python `jammi-client` (composition, dispatched in
# `jammi_ai/__init__.py`), NOT a second Rust gRPC client. So `wire` stays OFF
# here and the built wheel links no tonic/prost. The Rust `RemoteSession` lives
# on in the `jammi-ai` *crate* under `wire` for Rust consumers + `jammi-server`;
# it is simply not compiled into this wheel.
jammi-ai = { workspace = true }
jammi-lora.workspace = true
pyo3.workspace = true
arrow.workspace = true
arrow-array.workspace = true
chrono.workspace = true
datafusion.workspace = true
futures.workspace = true
pyo3-arrow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true

[features]
# `extension-module` tells pyo3 to skip linking against libpython — the
# right choice when the produced cdylib is loaded by a Python interpreter.
# The maturin build activates it explicitly via `features =
# ["extension-module"]` in `pyproject.toml`. Leaving it OFF by default
# means `cargo test --workspace` links the integration test binary
# against libpython and runs cleanly without per-crate flags.
extension-module = ["pyo3/extension-module"]
