[package]
name = "jammi-python"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "_native"
# `cdylib` is the maturin-built Python extension module. `rlib` lets
# downstream Rust crates (e.g. a downstream Python-bindings crate) depend on this
# crate and consume its public surface — `PyDatabase::session_arc` and the
# re-exported `InferenceSession` — to share a single session with the OSS
# `jammi_ai.Database` instead of opening a parallel one against the same
# artifact directory. The same crate-type pair is also what allows the
# integration test under `tests/` to drive `PyDatabase` from Rust.
crate-type = ["cdylib", "rlib"]

[dependencies]
jammi-db.workspace = true
# LOCAL-ONLY. The embed wheel is the in-process engine (default = `local`); its
# remote arm is the bundled pure-Python `jammi-client` (composition, dispatched
# in `jammi_ai/__init__.py`), NOT a second Rust gRPC client. The Rust wire
# client lives in the separate `jammi-wire` / `jammi-admin` / `jammi-client`
# crates for Rust consumers + `jammi-server`; none is compiled into this wheel.
#
# The embedded training verbs build their request with the same pure-Python
# assembly the remote client uses, then hand the serialized body to the shared
# `jammi_ai::wire` decode seam — so `prost` (the decode, owned by `jammi-ai`'s
# `local` feature) and `tonic` (only its `Status` type, the decode/validation
# error this crate maps to a Python exception) ride the wheel transitively. No
# transport stack (no client stubs, no channel) is linked.
jammi-ai = { workspace = true }
# Names only `tonic::Status`: the engine wire-decode seam reports a malformed or
# invalid request body as a `Status`, mapped to a Python exception in `error.rs`.
tonic = { workspace = true }
pyo3.workspace = true
arrow.workspace = true
arrow-array.workspace = true
chrono.workspace = true
datafusion.workspace = true
futures.workspace = true
pyo3-arrow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true

[features]
# `extension-module` tells pyo3 to skip linking against libpython — the
# right choice when the produced cdylib is loaded by a Python interpreter.
# The maturin build activates it explicitly via `features =
# ["extension-module"]` in `pyproject.toml`. Leaving it OFF by default
# means `cargo test --workspace` links the integration test binary
# against libpython and runs cleanly without per-crate flags.
extension-module = ["pyo3/extension-module"]
