[package]
name = "jammi-server"
description = "OSS Jammi server binary: Arrow Flight SQL, SessionService, TriggerService, and health/metrics endpoints"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "jammi-server"
path = "src/main.rs"

[dependencies]
# The `wire` feature pulls jammi-ai's gRPC surface: the generated `jammi.v1`
# stubs and the proto↔domain conversions this crate's service impls consume.
jammi-ai = { workspace = true, features = ["wire"] }
jammi-db.workspace = true
jammi-numerics.workspace = true
axum.workspace = true
arrow.workspace = true
arrow-flight.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
clap.workspace = true
datafusion.workspace = true
datafusion-flight-sql-server.workspace = true
futures.workspace = true
prometheus.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tonic-web.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
async-trait.workspace = true

[features]
default = []
cuda  = ["jammi-ai/cuda"]
metal = ["jammi-ai/metal"]
# Compiles the JetStream broker driver into the binary so production
# deploys can run Postgres + NATS via config without rebuilding from
# source. CI publishes the OSS image with this feature enabled.
jetstream-broker = ["jammi-db/jetstream-broker"]

[dev-dependencies]
tokio.workspace = true
tower = { workspace = true, features = ["util"] }
reqwest.workspace = true
jammi-test-utils.workspace = true
tempfile = "3"
parquet.workspace = true
# The gRPC integration tests build Arrow IPC payloads and encode raw protos by
# hand to exercise the wire surface end-to-end; the server's own code reaches
# these only through `jammi_ai::wire`, so they are test-only deps.
arrow-ipc.workspace = true
prost.workspace = true
prost-types.workspace = true
