[package]
name = "jammi-server"
description = "OSS Jammi server binary: Arrow Flight SQL, SessionService, TriggerService, and health/metrics endpoints"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "jammi-server"
path = "src/main.rs"

[dependencies]
# The `wire` feature pulls jammi-ai's gRPC surface: the generated `jammi.v1`
# stubs and the proto↔domain conversions this crate's service impls consume.
jammi-ai = { workspace = true, features = ["wire"] }
jammi-db.workspace = true
jammi-numerics.workspace = true
axum.workspace = true
arrow.workspace = true
arrow-flight.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
clap.workspace = true
datafusion.workspace = true
datafusion-flight-sql-server.workspace = true
futures.workspace = true
prometheus.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tonic-web.workspace = true
# The gRPC-Web trailers-only repair layer (`grpc_web_trailers`) sits outside
# `tonic-web` and rewrites a trailers-only error response into the in-body
# trailer frame a gRPC-Web client requires. It needs the tower `Layer` trait
# and the low-level HTTP body framing primitives directly.
tower = { workspace = true, features = ["util"] }
http-body.workspace = true
pin-project.workspace = true
bytes = "1"
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
async-trait.workspace = true

[features]
# `train` is on by default so the published image and every default build mount
# the full tier set (all-in-one). It compiles the `FineTuneService` mount (the
# `train` service tier); a `--no-default-features` serve-only build carries no
# training surface and the tier mechanism honestly reports `train` as
# uncompilable. The other optional tiers (`event` = TriggerService, `eval` =
# EvalService) always compile — they carry no heavy dep beyond the engine — and
# are gated at runtime via `[server] services`, not at compile time.
default = ["train"]
train = []
cuda  = ["jammi-ai/cuda"]
metal = ["jammi-ai/metal"]
# Compiles the JetStream broker driver into the binary so production
# deploys can run Postgres + NATS via config without rebuilding from
# source. CI publishes the OSS image with this feature enabled.
jetstream-broker = ["jammi-db/jetstream-broker"]

# Cloud object-store backends for source reads / result-table storage, forwarded
# to jammi-db (which gates each behind object_store's cloud SDKs). The published
# server image enables `storage-cloud` so it is deployment-agnostic — it reads
# r2:// / s3:// / gs:// / azure:// sources without a rebuild. Individual features
# let a deployer compile in only the cloud they use.
storage-s3 = ["jammi-db/storage-s3"]
storage-gcs = ["jammi-db/storage-gcs"]
storage-azure = ["jammi-db/storage-azure"]
storage-r2 = ["jammi-db/storage-r2"]
storage-cloud = ["jammi-db/storage-cloud"]

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true
jammi-test-utils.workspace = true
tempfile = "3"
parquet.workspace = true
# The gRPC integration tests build Arrow IPC payloads and encode raw protos by
# hand to exercise the wire surface end-to-end; the server's own code reaches
# these only through `jammi_ai::wire`, so they are test-only deps.
arrow-ipc.workspace = true
prost.workspace = true
prost-types.workspace = true
